[gd_scene load_steps=7 format=3 uid="uid://cxho30jvstjrq"]

[ext_resource type="Script" path="res://Scripts/Missile.gd" id="1_4t2e7"]
[ext_resource type="PackedScene" uid="uid://cwh3bgijnc6ej" path="res://Assets/3d/Missile.fbx" id="3_yhevy"]

[sub_resource type="Animation" id="Animation_fnns2"]
resource_name = "Spin"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.5708), Vector3(1.5708, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_j5ih0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehxup"]
_data = {
"RESET": SubResource("Animation_j5ih0"),
"Spin": SubResource("Animation_fnns2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fqp5"]
size = Vector2(20, 8)

[node name="Missile" type="Area2D"]
script = ExtResource("1_4t2e7")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 5.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(40, 40)
render_target_update_mode = 4

[node name="Missile" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_yhevy")]
transform = Transform3D(-2.18557e-07, 5, 0, -5, -2.18557e-07, 0, 0, 0, 5, 0.0687026, 0, -13.2251)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport"]
root_node = NodePath("../Missile")
autoplay = "Spin"
libraries = {
"": SubResource("AnimationLibrary_ehxup")
}

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.787613, 0.61617, 0, -0.61617, 0.787613, 0, 0.771, -12.2481)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, 0)
shape = SubResource("RectangleShape2D_3fqp5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(3, 0, -4, -4, -4, 4)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
